1999-11-02  Ken Raeburn  <raeburn@mit.edu>

	* localaddr.c (krb5_os_localaddr): Conditionalize INET6 support on
	new KRB5_USE_INET6 macro.

1999-10-26  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Clean up usage of CFLAGS, CPPFLAGS, DEFS, DEFINES,
	LOCAL_INCLUDES such that one can override CFLAGS from the command
	line without losing CPP search patchs and defines. Some associated
	Makefile cleanup. [from wsanchez@apple.com]

1999-10-22  Ken Raeburn  <raeburn@mit.edu>

	* prompter.c (krb5_prompter_posix): Make ointrfunc, fd, and
	errcode volatile.
	* promptusr.c (krb5_os_get_tty_uio): Make ointrfunc and retval
	volatile.
	* read_pwd.c (krb5_read_password): Make ointrfunc volatile.  Fix
	volatile decl for readin_string (pointer is volatile, doesn't
	point to volatile).

	* changepw.c (krb5_change_password): Wait only two minutes, not
	indefinitely, for a response from the kpasswd server.

1999-10-18  Ken Raeburn  <raeburn@mit.edu>

	* localaddr.c (krb5_os_localaddr): Don't bother trying to create
	inet6 socket; any socket type will do.

1999-10-17  Ken Raeburn  <raeburn@mit.edu>

	* localaddr.c (krb5_os_localaddr): Raise buffer size to 10K.
	Handle INET6 addresses.  If INET6 support is built in but the
	socket creation fails, fall back to INET.

1999-09-28  Ken Raeburn  <raeburn@mit.edu>

	* changepw.c (krb5_locate_kpasswd): Declare local variable i even
	when DNS code is not in use.
	(krb5_locate_srv_conf, krb5_locate_srv_dns): Delete declarations.

1999-09-21  Ken Raeburn  <raeburn@mit.edu>

	Changes from Jeffrey Altman to look up kpasswd server using DNS.
	* changepw.c: (krb5_locate_kpasswd): New function, split out from
	krb5_change_password.  Calls krb5_locate_srv_dns if use of DNS is
	desired, and krb5_locate_srv_conf to check config file.
	(krb5_change_password): Call it to find the server.
	* locate_kdc.c (krb5_locate_srv_conf): No longer static.  Choose
	default port numbers based on service name rather than a single
	hard-coded value.