@@ -1,3 +1,8 @@
+1999-11-22  Miro Jurisic  <meeroh@mit.edu>
+
+	* ccdefname.c (get_from_os): Replaced Kerberos5GlobalsLib calls
+	with CCAPI v3 calls
+
 1999-11-02  Ken Raeburn  <raeburn@mit.edu>
 
 	* localaddr.c (krb5_os_localaddr): Conditionalize INET6 support on
